--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,30 +3,51 @@
 @tailwind utilities;
 
 @font-face {
-	font-family: "Comic Cat";
-	src: url('../public/comic-cat.otf');
+  font-family: "Comic Cat";
+  src: url("../public/comic-cat.otf");
 }
 
-a {
-	@apply underline text-highlight hover:text-accent-1 transition-colors
+@layer base {
+  a {
+    @apply text-highlight hover:text-accent-1 transition-colors;
+  }
+
+  html,
+  body {
+    @apply bg-secondary;
+  }
+
+  h2 {
+    @apply text-4xl;
+  }
 }
 
-html, body {
-	@apply bg-secondary
-}
+@layer components {
+  .main-height {
+    height: calc(100vh - 100px);
+  }
 
-.btn {
-	@apply rounded-full  px-20 h-20 font-comic-cat text-header
-}
+  .control label {
+    @apply block;
+  }
 
-.btn.primary {
-	@apply bg-primary text-secondary
-}
+  .control input {
+    @apply rounded-lg w-full border-0;
+  }
 
-.btn.secondary {
-	@apply bg-secondary text-primary
-}
+  .btn {
+    @apply rounded-full px-10 h-10 font-comic-cat text-xl cursor-pointer transition-colors outline-none focus:ring-2 focus:ring-inset;
+  }
 
-.btn.highlight {
-	@apply bg-highlight
+  .btn.primary {
+    @apply bg-primary text-secondary hover:bg-accent-1 focus:ring-secondary;
+  }
+
+  .btn.secondary {
+    @apply bg-secondary text-primary hover:bg-accent-1 hover:text-secondary focus:ring-accent-2;
+  }
+
+  .btn.highlight {
+    @apply bg-highlight;
+  }
 }
