--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,10 @@
     @apply rounded-lg w-full border-0;
   }
 
+	.control ~ .control {
+		@apply mt-4
+	}
+
   .btn {
     @apply rounded-full px-10 h-10 font-comic-cat text-xl cursor-pointer transition-colors outline-none focus:ring-2 focus:ring-inset;
   }
