--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,7 +59,8 @@
 	}
 
   .btn {
-    @apply flex items-center justify-center rounded-full px-10 h-10 font-comic-cat text-xl cursor-pointer transition-colors outline-none focus:ring-2 focus:ring-inset;
+    @apply flex items-center justify-center rounded-full px-4 sm:px-10 h-10 font-comic-cat 
+		text-lg sm:text-xl cursor-pointer transition-colors outline-none focus:ring-2 focus:ring-inset;
   }
 
   .btn.primary {
