--- a/styles/Lesson.module.css
+++ b/styles/Lesson.module.css
@@ -14,7 +14,11 @@
 	@apply place-self-center max-h-72
 }
 
-.lesson img:has(+ img), .lesson img+img {
+.lesson p img:nth-child(odd) {
+	@apply col-span-2
+}
+
+.lesson img:nth-child(odd):has(+ img), .lesson img+img {
 	@apply col-span-1
 }
 
@@ -25,6 +29,10 @@
 .lesson h5,
 .lesson h6 {
 	@apply font-semibold mt-6 mb-2
+}
+
+.lesson ol {
+	@apply list-decimal ml-12
 }
 
 .lesson h1 {
